--- a/shop-web/package.json
+++ b/shop-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shop-web",
+  "name": "beerbook",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.8",
+    "vue-router-sync": "^0.1.0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
