--- a/shop-web/package.json
+++ b/shop-web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "json-parse-even-better-errors": "^2.3.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8",
     "vue-router-sync": "^0.1.0",
