--- a/shop-api/example.env
+++ b/shop-api/example.env
@@ -1,15 +1,35 @@
 #
+# ENVs for app config
+#
+PORT=3000
+
+#
 # ENVs for MySQL docker image
 #
-POSTGRES_DB=map
+POSTGRES_DB=shop
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 POSTGRES_PORT=5432
 
 
+#
 # DB's config for TypeORM
 #
-TYPEORM_DATABASE=map
+TYPEORM_DATABASE=shop
 TYPEORM_HOST=localhost
 TYPEORM_PASSWORD=postgres
 TYPEORM_USERNAME=postgres
+
+#
+# Redis config
+#
+REDIS_PORT=6379
+REDIS_HOST=localhost
+
+#
+# Redis config
+#
+MAIL_USER=your-account
+MAIL_PASS=your_password
+MAIL_SERVICE=gmail
+MAIL_HOST=smtp.gmail.com
