--- a/shop-web/package.json
+++ b/shop-web/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "json-parse-even-better-errors": "^2.3.1",
     "vue": "^3.0.0",
