--- a/shop-api/tsconfig.json
+++ b/shop-api/tsconfig.json
@@ -19,7 +19,7 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@App/*": ["src/*"],
-      "lib/*": ["common/*"]
+      "lib/*": ["common/*"],
     }
   }
 }
