--- a/shop-api/example.env
+++ b/shop-api/example.env
@@ -13,8 +13,9 @@ POSTGRES_PORT=5432
 
 
 #
-# DB's config for TypeORM
+# DB's config for TypeORMd
 #
+TYPEORM_PORT=5433
 TYPEORM_DATABASE=shop
 TYPEORM_HOST=localhost
 TYPEORM_PASSWORD=postgres
@@ -29,7 +30,16 @@ REDIS_HOST=localhost
 #
 # Redis config
 #
-MAIL_USER=your-account
-MAIL_PASS=your_password
+MAIL_USER=<your-username>
+MAIL_PASS=<your-password>
 MAIL_SERVICE=gmail
 MAIL_HOST=smtp.gmail.com
+
+#
+# Static files destination
+#
+MULTER_DEST=./upload
+
+
+FRONT_BASE_URL=http://localhost:8080
+BACKEND_BASE_URL=http://localhost:3000/v1
