--- a/shop-api/package.json
+++ b/shop-api/package.json
@@ -18,7 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "ENV=testing jest --config ./test/jest-e2e.json",
     "typeorm": "node -r ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js --config src/database/ormconfig.ts",
     "migration:generate": "npm run build && npm run typeorm migration:generate -- -n",
     "migration:run": "npm run build && npm run typeorm migration:run"
@@ -76,6 +76,10 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
+  "moduleDirectories": [
+    "node_modules",
+    "src"
+  ],
   "jest": {
     "moduleDirectories": [
       "node_modules",
@@ -100,7 +104,6 @@
     }
   },
   "modulePaths": [
-    "<rootDir>/src",
-    "<rootDir>/node_modules"
+    "<rootDir>"
   ]
 }
