--- a/shop-api/tsconfig.json
+++ b/shop-api/tsconfig.json
@@ -16,10 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@App/*": ["src/*"],
-      "lib/*": ["common/*"],
-    }
+    "noFallthroughCasesInSwitch": false
   }
 }
