--- a/shop-api/example.env
+++ b/shop-api/example.env
@@ -43,3 +43,9 @@ MULTER_DEST=./upload
 
 FRONT_BASE_URL=http://localhost:8080
 BACKEND_BASE_URL=http://localhost:3000/v1
+
+#
+# Auto create admin credentials
+#
+ADMIN_EMAIL=<admin_email>
+ADMIN_PASSWORD=<admin_password>
